
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".BroadcastReceiverActivity">

<TextView
    android:id="@+id/tv_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginBottom="10dp"
    android:text="@string/app_title"
    />

<EditText android:id="@+id/et_broadcast_msg"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:singleLine="false"
    android:layout_marginTop="10dp"
    android:hint="@string/et_broadcast_msg_hint"
    android:layout_marginBottom="50dp">
</EditText>

<Button android:id="@+id/send_broadcast_btn"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_button_green"
    android:layout_marginBottom="5dp"
    android:text="@string/send_broadcast"
    android:textStyle="bold"
    android:onClick="doClick"
    />

</LinearLayout>
