<!--
    res/values/main_notify.xml
    Contains string resources used by DemoNotifyActivity
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_notification_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/demo_notifications"
        />


    <Button android:id="@+id/send_notification_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_green"
        android:layout_marginBottom="5dp"
        android:text="@string/send_notification"
        android:textStyle="bold"
        android:onClick="doClick"
        />

    <Button android:id="@+id/clear_notification_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_red"
        android:layout_marginBottom="5dp"
        android:text="@string/clear_notification"
        android:textStyle="bold"
        android:onClick="doClick"
        />

</LinearLayout>
